# fastapikit

./: CHANGELOG.md  DEVELOPMENT.md  GETTING_STARTED.md  MANIFEST.in  PROJECT_SUMMARY.md  README.ko.md  README.md  example.py  pyproject.toml  ruff.toml  simple_example.py
.github/workflows/: publish.yml  tests.yml
examples/: README.md
examples/auth/: README.md  app.py
examples/cors/: app.py
examples/external_auth/: README.md  app.py
examples/simple/: README.md  app.py
src/fastapi_kit/: __init__.py  base.py  logging_api_route.py  logging_utils.py
src/fastapi_kit/exception/: definition.py  error_info.py  handler.py  type.py
src/fastapi_kit/log/: __init__.py  loguru_helper.py
src/fastapi_kit/type/: base_model.py
src/fastapi_kit/util/: etc.py  identifier.py
src/fastapikit/: __init__.py  auth.py  base.py  logging_api_route.py  logging_utils.py  response.py  utils.py
src/fastapikit/exception/: definition.py  error_info.py  handler.py  type.py
src/fastapikit/log/: __init__.py  loguru_helper.py
src/fastapikit/type/: base_model.py
src/fastapikit/util/: etc.py
tests/: __init__.py  test_app.py  test_auth.py  test_base_model.py  test_cors.py  test_exception.py  test_response.py  test_shutdown.py
